[package]
name = "openvpn-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
zip = "0.6.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1.22", features = ["macros", "rt", "rt-multi-thread"] }
dotenvy = "0.15.6"
fs_extra = "1.2"
uuid = { version = "1.2", features = ["v4"] }
