[package]
name = "openvpn-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
zip = "0.6.3"
tokio = { version = "1.22", features = ["process"] }
dotenvy = "0.15.6"
fs_extra = "1.2"
uuid = { version = "1.2", features = ["v4"] }
actix-web = "4"
awc = { version = "3", features = ["rustls"] }
process-stream = "0.4.1"
